make-a-wish-salesforce/src/objects/dsfs__DocuSign_Status__c.object
<CustomObject>
    <description>DocuSign Status is the foundation Custom Object for integration of DocuSign and Salesforce.</description>
    <fields>
        <fullName>Associated_Childeren__c</fullName>
        <label>Associated Childeren</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttachmentId__c</fullName>
        <description>This field is used to store the corresponding attachment to the docusign status record.</description>
        <label>AttachmentId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+dsfs__Case__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Email_Hidden__c</fullName>
        <label>Case Owner Email Hidden</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Name_Hidden__c</fullName>
        <label>Case Owner Name Hidden</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conflict_Of_Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conflict Of Interest</label>
        <referenceTo>Conflict_Of_Interest__c</referenceTo>
        <relationshipLabel>DocuSign Status</relationshipLabel>
        <relationshipName>DocuSign_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_First_and_Last_Name__c</fullName>
        <label>Contact First and Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Hidden_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store contact value to update the confilict of interest when insert from landing page.</description>
        <label>Docusign Hidden Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DocuSign Status - Volunteer</relationshipLabel>
        <relationshipName>DocuSign_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Form_Name__c</fullName>
        <description>This field is used to identify the which for has been sent.</description>
        <label>Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minor_Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Minor Participant</label>
        <referenceTo>Minor_Participant__c</referenceTo>
        <relationshipLabel>DocuSign Status</relationshipLabel>
        <relationshipName>DocuSign_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipient_names__c</fullName>
        <description>This field is used to store the DocuSign recipient name for each envelop</description>
        <label>Recipient Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Signatures__c</fullName>
        <description>This field is used to Identify whether the recipient has completed the sign of the corresponding envelope or not</description>
        <label>Signatures</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Signature(s) present</fullName>
                </value>
                <value>
                    <fullName>No signature present</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_For_Email_Template__c</fullName>
        <formula>MID(dsfs__Subject__c ,22, LEN(dsfs__Subject__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject For Email Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UAT_Data_Warning__c</fullName>
        <formula>If(datevalue(CreatedDate) &lt; DATE(2019, 09, 25), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UAT Data Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Record_Count__c</fullName>
        <description>Enables better record counting functions on reports.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wish_Required_Signature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related Wish Required Signature record.</description>
        <label>Wish Required Signature</label>
        <referenceTo>Wish_Required_Signature__c</referenceTo>
        <relationshipLabel>DocuSign Status</relationshipLabel>
        <relationshipName>DocuSign_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dsfs__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>DocuSign Status</relationshipLabel>
        <relationshipName>R00N80000002vw3fEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dsfs__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DocuSign Status</relationshipLabel>
        <relationshipName>R00N80000002eb1GEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dsfs__Completed_Age__c</fullName>
        <formula>NOW() - dsfs__Completed_Date_Time__c</formula>
        <label>Completed Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dsfs__Completed_Date_Time__c</fullName>
        <label>Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dsfs__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DocuSign Status</relationshipLabel>
        <relationshipName>DocuSign_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dsfs__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>DocuSign Status</relationshipLabel>
        <relationshipName>R00N80000002vvynEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dsfs__Days_to_Complete__c</fullName>
        <formula>(NOW() -  dsfs__Sent_Date_Time__c ) - (NOW() - dsfs__Completed_Date_Time__c)</formula>
        <label>Days to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dsfs__Declined_Date_Time__c</fullName>
        <label>Declined</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dsfs__Declined_Reason_Extended__c</fullName>
        <label>Declined Reason Extended</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__Declined_Reason__c</fullName>
        <label>Declined Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__DocuSign_Envelope_ID__c</fullName>
        <label>DocuSign Envelope ID</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__EnvelopeConfiguration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuSign Envelope Configuration</label>
        <referenceTo>dsfs__EnvelopeConfiguration__c</referenceTo>
        <relationshipLabel>DocuSign Status</relationshipLabel>
        <relationshipName>DocuSign_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dsfs__Envelope_Link__c</fullName>
        <label>Envelope Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__Envelope_Status__c</fullName>
        <label>Envelope Status</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__Hours_to_Complete__c</fullName>
        <formula>dsfs__Minutes_to_Complete__c /60</formula>
        <label>Hours to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dsfs__Hrs_Sent_to_Sign__c</fullName>
        <formula>IF( dsfs__Envelope_Status__c  = &quot;Voided&quot;,  0,  IF(dsfs__Envelope_Status__c  = &quot;Declined&quot;,  0,   IF(dsfs__Envelope_Status__c  = &quot;Sent&quot;,  dsfs__Sent_Age__c * 24,  dsfs__Hours_to_Complete__c ) ) )</formula>
        <label>Hours Sent to Sign</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dsfs__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>DocuSign Status</relationshipLabel>
        <relationshipName>DocuSign_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dsfs__Minutes_to_Complete__c</fullName>
        <formula>dsfs__Days_to_Complete__c * 1440</formula>
        <label>Minutes to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dsfs__Number_Completed__c</fullName>
        <formula>IF( dsfs__Envelope_Status__c = &quot;Completed&quot;, 1, null)</formula>
        <label>Number Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dsfs__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>DocuSign Status</relationshipLabel>
        <relationshipName>R00N80000002fD9vEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dsfs__Sender_Email__c</fullName>
        <label>Sender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>dsfs__Sender__c</fullName>
        <label>Sender</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__Sent_Age__c</fullName>
        <formula>NOW() -  dsfs__Sent_Date_Time__c</formula>
        <label>Sent Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dsfs__Sent_Date_Time__c</fullName>
        <label>Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dsfs__Subject__c</fullName>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__Time_to_Complete__c</fullName>
        <formula>IF( dsfs__Envelope_Status__c  = &quot;Voided&quot;, &quot;&quot;,  IF(dsfs__Envelope_Status__c  = &quot;Declined&quot;,  &quot;&quot;,   IF(dsfs__Envelope_Status__c  = &quot;Sent&quot;,  &quot;&quot;, TEXT( 
ROUND( 
( dsfs__Completed_Date_Time__c  -  dsfs__Sent_Date_Time__c ) - 
MOD(dsfs__Completed_Date_Time__c  - dsfs__Sent_Date_Time__c,1) 
,0) 
) 
&amp;&quot; day(s), &quot;&amp; 
TEXT( 
ROUND( 
MOD(dsfs__Completed_Date_Time__c - dsfs__Sent_Date_Time__c,1)*24 - 
MOD(MOD(dsfs__Completed_Date_Time__c - dsfs__Sent_Date_Time__c,1)*24,1) 
,0) 
) 
&amp;&quot; hour(s), &quot;&amp; 
TEXT( 
ROUND( 
MOD(MOD(dsfs__Completed_Date_Time__c - dsfs__Sent_Date_Time__c,1)*24,1) 
*60 
,0) 
)&amp;&quot; minute(s)&quot;) ) )</formula>
        <label>Time to Complete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__Viewed_Date_Time__c</fullName>
        <label>Last Viewed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dsfs__Voided_Date_Time__c</fullName>
        <label>Voided</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dsfs__Voided_Reason_Extended__c</fullName>
        <label>Voided Reason Extended</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__Voided_Reason__c</fullName>
        <label>Voided Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>isConflict__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used as hidden field when volunterr click the ok button on volunteer landing page.</description>
        <label>isConflict</label>
        <type>Checkbox</type>
    </fields>
    <label>DocuSign Status</label>
    <listViews>
        <fullName>Diagnosis_Verification</fullName>
        <columns>NAME</columns>
        <columns>dsfs__Sender__c</columns>
        <columns>dsfs__Subject__c</columns>
        <columns>dsfs__Envelope_Status__c</columns>
        <columns>dsfs__Opportunity__c</columns>
        <columns>dsfs__Sent_Date_Time__c</columns>
        <columns>dsfs__Viewed_Date_Time__c</columns>
        <columns>dsfs__Completed_Date_Time__c</columns>
        <columns>dsfs__Hrs_Sent_to_Sign__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__Subject__c</field>
            <operation>contains</operation>
            <value>Diagnosis</value>
        </filters>
        <filters>
            <field>dsfs__Sent_Date_Time__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/18/2019 12:00 AM</value>
        </filters>
        <label>Diagnosis Verification</label>
    </listViews>
    <listViews>
        <fullName>Voided</fullName>
        <columns>NAME</columns>
        <columns>dsfs__Sender__c</columns>
        <columns>dsfs__Subject__c</columns>
        <columns>dsfs__Envelope_Status__c</columns>
        <columns>dsfs__Opportunity__c</columns>
        <columns>dsfs__Sent_Date_Time__c</columns>
        <columns>dsfs__Voided_Date_Time__c</columns>
        <columns>dsfs__Voided_Reason__c</columns>
        <columns>dsfs__Viewed_Date_Time__c</columns>
        <columns>dsfs__Completed_Date_Time__c</columns>
        <columns>dsfs__Hrs_Sent_to_Sign__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__Envelope_Status__c</field>
            <operation>equals</operation>
            <value>Voided</value>
        </filters>
        <label>Voided</label>
    </listViews>
    <listViews>
        <fullName>dsfs__All1</fullName>
        <columns>NAME</columns>
        <columns>dsfs__DocuSign_Envelope_ID__c</columns>
        <columns>dsfs__Sent_Date_Time__c</columns>
        <columns>dsfs__Envelope_Status__c</columns>
        <columns>dsfs__Subject__c</columns>
        <columns>Case_Owner_Email_Hidden__c</columns>
        <columns>Case_Owner_Name_Hidden__c</columns>
        <columns>Form_Name__c</columns>
        <columns>dsfs__Lead__c</columns>
        <columns>Recipient_names__c</columns>
        <columns>dsfs__Sender__c</columns>
        <columns>dsfs__Sender_Email__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__Envelope_Status__c</field>
            <operation>equals</operation>
            <value>sent</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>12/13/2019 12:00 AM</value>
        </filters>
        <filters>
            <field>Form_Name__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>dsfs__All_Completed_Envelopes</fullName>
        <columns>NAME</columns>
        <columns>dsfs__Sender__c</columns>
        <columns>dsfs__Subject__c</columns>
        <columns>dsfs__Sent_Date_Time__c</columns>
        <columns>dsfs__Completed_Date_Time__c</columns>
        <columns>dsfs__Hours_to_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__Envelope_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>All Completed Envelopes</label>
    </listViews>
    <listViews>
        <fullName>dsfs__All_Envelopes</fullName>
        <columns>NAME</columns>
        <columns>dsfs__Sender__c</columns>
        <columns>dsfs__Subject__c</columns>
        <columns>dsfs__Envelope_Status__c</columns>
        <columns>dsfs__Opportunity__c</columns>
        <columns>dsfs__Sent_Date_Time__c</columns>
        <columns>dsfs__Viewed_Date_Time__c</columns>
        <columns>dsfs__Completed_Date_Time__c</columns>
        <columns>dsfs__Hrs_Sent_to_Sign__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Envelopes</label>
    </listViews>
    <nameField>
        <displayFormat>DSX-{0000000}</displayFormat>
        <label>Envelope#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>